force-app/main/default/objects/Calculated_Insight__c/Calculated_Insight__c.object-meta.xml
<CustomObject>
    <label>Calculated Insight</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculated Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>