force-app/main/default/objects/Calculated_Insight__c/fields/Data_Process_Error__c.field-meta.xml
<CustomField>
    <fullName>Data_Process_Error__c</fullName>
    <label>Data Process Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>