force-app/main/default/objects/Calculated_Insight__c/fields/Data_Processing_Retry_Interval__c.field-meta.xml
<CustomField>
    <fullName>Data_Processing_Retry_Interval__c</fullName>
    <description>The minute value post which the Batch should retry again</description>
    <inlineHelpText>The minute value post which the Batch should retry again . If there is a callout failure for the target system is under maintenance then after this minutes again the whole sync process will be retried</inlineHelpText>
    <label>Data Processing Retry Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>