force-app/main/default/objects/Calculated_Insight__c/fields/Data_Sync_Done__c.field-meta.xml
<CustomField>
    <fullName>Data_Sync_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Sync Done</label>
    <type>Checkbox</type>
</CustomField>