force-app/main/default/objects/Calculated_Insight__c/fields/Last_Data_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Data_Sync__c</fullName>
    <label>Last Data Sync</label>
    <type>DateTime</type>
</CustomField>