force-app/main/default/objects/Calculated_Insight__c/fields/Last_Metadata_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Metadata_Sync__c</fullName>
    <label>Last Metadata Sync</label>
    <type>DateTime</type>
</CustomField>