force-app/main/default/objects/Calculated_Insight__c/fields/latestProcessTime__c.field-meta.xml
<CustomField>
    <fullName>latestProcessTime__c</fullName>
    <label>Latest Process Time</label>
    <type>DateTime</type>
</CustomField>