force-app/main/default/objects/Calculated_Insight__c/fields/latestSuccessfulProcessTime__c.field-meta.xml
<CustomField>
    <fullName>latestSuccessfulProcessTime__c</fullName>
    <label>Latest Successful Process Time</label>
    <type>DateTime</type>
</CustomField>