force-app/main/default/objects/Calculated_Insight__c/fields/Metadata_Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Processing_Error__c</fullName>
    <label>Metadata Processing Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>