force-app/main/default/objects/Calculated_Insight__c/fields/Metadata_Sync_Done__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Sync_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metadata Sync Done</label>
    <type>Checkbox</type>
</CustomField>