force-app/main/default/objects/Calculated_Insight__c/fields/partitionBy__c.field-meta.xml
<CustomField>
    <fullName>partitionBy__c</fullName>
    <label>Partition By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>