force-app/main/default/objects/Calculated_Insight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Developer_Name__c</columns>
    <columns>displayName__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>latestProcessTime__c</columns>
    <columns>latestSuccessfulProcessTime__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>partitionBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>